--- a/index.html
+++ b/index.html
@@ -19,30 +19,65 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="a-github-android-app" class="anchor" href="#a-github-android-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>A Github Android APP</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p><img src="https://github.com/Leaking/GithubKnife/blob/master/screenshot/GitLogo.jpg" width="240"></p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h1>
+<a id="how-does-it-look-like-" class="anchor" href="#how-does-it-look-like-" aria-hidden="true"><span class="octicon octicon-link"></span></a>How does it look like ?</h1>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p><img src="https://github.com/Leaking/GithubKnife/blob/master/screenshot/git1.pic.jpg" width="340">
+<img src="https://github.com/Leaking/GithubKnife/blob/master/screenshot/git2.pic.jpg" width="340"></p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p><img src="https://github.com/Leaking/GithubKnife/blob/master/screenshot/git3.pic.jpg" width="340">
+<img src="https://github.com/Leaking/GithubKnife/blob/master/screenshot/git4.pic.jpg" width="340"></p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p><img src="https://github.com/Leaking/GithubKnife/blob/master/screenshot/git5.pic.jpg" width="340">
+<img src="https://github.com/Leaking/GithubKnife/blob/master/screenshot/git6.pic.jpg" width="340"></p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<h1>
+<a id="develop-ide" class="anchor" href="#develop-ide" aria-hidden="true"><span class="octicon octicon-link"></span></a>Develop IDE</h1>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Android Studio</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<h1>
+<a id="todo" class="anchor" href="#todo" aria-hidden="true"><span class="octicon octicon-link"></span></a>TODO</h1>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li>Search Module(Under development)</li>
+<li>Setting Module</li>
+</ul>
+
+<h1>
+<a id="contact-me" class="anchor" href="#contact-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact me</h1>
+
+<p><a href="mailto:chenhuazhaoao@gmail.com">chenhuazhaoao@gmail.com</a></p>
+
+<h1>
+<a id="support-development" class="anchor" href="#support-development" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support Development</h1>
+
+<p>Use WeChat to scan the below QR Code to tip me.</p>
+
+<p><img src="https://github.com/Leaking/GithubKnife/blob/master/screenshot/git7.pic.jpg" width="340"></p>
+
+<h1>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>LICENSE</h1>
+
+<p>Copyright 2015 Quinn Chen</p>
+
+<p>Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at</p>
+
+<pre><code>   http://www.apache.org/licenses/LICENSE-2.0
+</code></pre>
+
+<p>Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Leaking/WeGit">Wegit</a> is maintained by <a href="https://github.com/Leaking">Leaking</a>.</span>
